# afco_sourcecode

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  Makefile.am  SECURITY.md  configure.ac  libafcoconsensus.pc.in
doc/man/: Makefile.am  afco-cli.1  afco-qt.1  afco-tx.1  afco-wallet.1  afcod.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.h  afco-cli-res.rc  afco-cli.cpp  afco-tx-res.rc  afco-tx.cpp  afco-wallet-res.rc  afco-wallet.cpp  afcod-res.rc  afcod.cpp  amount.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  blockencodings.h  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  (+82 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  data.h  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  chacha_poly_aead.h  common.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  poly1305.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha3.h  sha512.h  siphash.h
src/crypto/ctaes/: README.md
src/index/: base.h  blockfilterindex.h  disktxpos.h  txindex.h
src/interfaces/: README.md  chain.h  handler.h  node.cpp  node.h  wallet.h
src/leveldb/util/: env_posix.cc
src/logging/: timer.h
src/node/: README.md  coin.h  coinstats.cpp  coinstats.h  context.h  psbt.cpp  psbt.h  transaction.h  ui_interface.h  utxo_snapshot.h
src/policy/: feerate.h  fees.cpp  fees.h  policy.h  rbf.h  settings.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/qt/: README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  afco.cpp  afco.h  afco.qrc  afco_locale.qrc  afcoaddressvalidator.cpp  afcoaddressvalidator.h  afcoamountfield.cpp  afcoamountfield.h  afcogui.cpp  afcogui.h  afcostrings.cpp  afcounits.cpp  afcounits.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  (+62 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: afco_af.ts  afco_am.ts  afco_ar.ts  afco_be.ts  afco_bg.ts  afco_bn.ts  afco_bs.ts  afco_ca.ts  afco_cs.ts  afco_cy.ts  afco_da.ts  afco_de.ts  afco_el.ts  afco_en.ts  afco_en_GB.ts  afco_eo.ts  afco_es.ts  afco_es_CL.ts  afco_es_CO.ts  afco_es_DO.ts  afco_es_MX.ts  afco_es_VE.ts  afco_et.ts  afco_eu.ts  afco_fa.ts  afco_fi.ts  afco_fil.ts  afco_fr.ts  afco_gl_ES.ts  afco_he.ts  afco_hi.ts  afco_hr.ts  afco_hu.ts  afco_id.ts  afco_is.ts  afco_it.ts  afco_ja.ts  afco_ka.ts  afco_kk.ts  afco_km.ts  (+46 more)
src/qt/res/: afco-qt-res.rc
src/qt/test/: addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  compattests.cpp  compattests.h  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  util.cpp  util.h
src/script/: afcoconsensus.cpp  afcoconsensus.h  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  script.h  script_error.cpp  script_error.h  sigcache.h  sign.cpp  sign.h  signingprovider.h  standard.h
src/secp256k1/: .travis.yml  README.md  SECURITY.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/include/: secp256k1_schnorrsig.h
src/secp256k1/src/: tests.c
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: README.md  addrman_tests.cpp  amount_tests.cpp  bswap_tests.cpp  compress_tests.cpp  crypto_tests.cpp  descriptor_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main.cpp  merkle_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  script_tests.cpp  scriptnum10.h  settings_tests.cpp  system_tests.cpp  util_tests.cpp  util_threadnames_tests.cpp  validationinterface_tests.cpp
src/test/data/: README.md  sighash.json  tx_invalid.json  tx_valid.json
src/test/fuzz/: descriptor_parse.cpp  deserialize.cpp  eval_script.cpp  fuzz.cpp  (+6 more)
src/univalue/: README.md
src/util/: asmap.h  bip32.h  bytevectorhash.h  check.h  error.h  fees.h  golombrice.h  macros.h  memory.h  message.cpp  message.h  moneystr.cpp  moneystr.h  rbf.h  ref.h  settings.h  spanparsing.h  strencodings.cpp  strencodings.h  string.h  system.cpp  system.h  threadnames.cpp  threadnames.h  time.cpp  time.h  translation.h  ui_change_type.h  url.h  vector.h
src/wallet/: bdb.cpp  bdb.h  coincontrol.h  coinselection.h  context.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  init.cpp  ismine.h  load.cpp  load.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  salvage.cpp  salvage.h  scriptpubkeyman.h  sqlite.cpp  sqlite.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.cpp  walletutil.h
src/zmq/: zmqabstractnotifier.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h  zmqutil.h
(+355 files in other folders)
