dist_man1_MANS=

if BUILD_AFCOD
  dist_man1_MANS+=afcod.1
endif

if ENABLE_QT
  dist_man1_MANS+=afco-qt.1
endif

if BUILD_AFCO_CLI
  dist_man1_MANS+=afco-cli.1
endif

if BUILD_AFCO_TX
  dist_man1_MANS+=afco-tx.1
endif

if ENABLE_WALLET
if BUILD_AFCO_WALLET
  dist_man1_MANS+=afco-wallet.1
endif
endif
